force-app/main/default/objects/Group_Hierarchy__c/Group_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Group Hierarchy</label>
    <nameField>
        <label>Group Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>