force-app/main/default/objects/Group_Hierarchy__c/fields/Division_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Division_Cost_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division Cost Center</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Groups Hierarchy</relationshipLabel>
    <relationshipName>Groups_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>