force-app/main/default/objects/Group_Hierarchy__c/fields/DivisionCode__c.field-meta.xml
<CustomField>
    <fullName>DivisionCode__c</fullName>
    <formula>Division_Cost_Center__r.CostCenter__c</formula>
    <label>DivisionCode</label>
    <type>Text</type>
</CustomField>