force-app/main/default/objects/Group_Hierarchy__c/fields/DivisionCodetoDelete__c.field-meta.xml
<CustomField>
    <fullName>DivisionCodetoDelete__c</fullName>
    <label>DivisionCodetodelete</label>
    <length>30</length>
    <type>Text</type>
</CustomField>