force-app/main/default/objects/Group_Hierarchy__c/fields/DivisionName__c.field-meta.xml
<CustomField>
    <fullName>DivisionName__c</fullName>
    <label>DivisionName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>