force-app/main/default/objects/Group_Hierarchy__c/fields/Group_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Group_Cost_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Cost Center</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Groups Hierarchy (Group Cost Center)</relationshipLabel>
    <relationshipName>Groups_Hierarchy2</relationshipName>
    <type>Lookup</type>
</CustomField>