force-app/main/default/objects/Group_Hierarchy__c/fields/GroupCode__c.field-meta.xml
<CustomField>
    <fullName>GroupCode__c</fullName>
    <formula>Group_Cost_Center__r.CostCenter__c</formula>
    <label>GroupCode</label>
    <type>Text</type>
</CustomField>