force-app/main/default/objects/Group_Hierarchy__c/fields/GroupCodetobedeleted__c.field-meta.xml
<CustomField>
    <fullName>GroupCodetobedeleted__c</fullName>
    <label>GroupCodetobedeleted</label>
    <length>30</length>
    <type>Text</type>
</CustomField>