force-app/main/default/objects/Group_Hierarchy__c/fields/Leader10__c.field-meta.xml
<CustomField>
    <fullName>Leader10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leader10</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Groups Hierarchy (Leader10)</relationshipLabel>
    <relationshipName>Groups_Hierarchy9</relationshipName>
    <type>Lookup</type>
</CustomField>