force-app/main/default/objects/Group_Hierarchy__c/fields/Leader2__c.field-meta.xml
<CustomField>
    <fullName>Leader2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leader2</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Groups Hierarchy (Leader2)</relationshipLabel>
    <relationshipName>Groups_Hierarchy1</relationshipName>
    <type>Lookup</type>
</CustomField>