force-app/main/default/objects/Group_Hierarchy__c/fields/Leader3__c.field-meta.xml
<CustomField>
    <fullName>Leader3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leader3</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Groups Hierarchy (Leader3)</relationshipLabel>
    <relationshipName>Groups_Hierarchy2</relationshipName>
    <type>Lookup</type>
</CustomField>