force-app/main/default/objects/Group_Hierarchy__c/fields/Leader_Email__c.field-meta.xml
<CustomField>
    <fullName>Leader_Email__c</fullName>
    <formula>Leader__r.EvMailAddr__c &amp;&quot;;&quot;&amp;Leader2__r.EvMailAddr__c &amp; &quot;;&quot;&amp; Leader3__r.EvMailAddr__c&amp; &quot;;&quot;&amp; Leader4__r.EvMailAddr__c&amp; &quot;;&quot;&amp; Leader5__r.EvMailAddr__c&amp; &quot;;&quot;&amp; Leader6__r.EvMailAddr__c&amp; &quot;;&quot; &amp; Leader7__r.EvMailAddr__c&amp; &quot;;&quot; &amp; Leader8__r.EvMailAddr__c&amp; &quot;;&quot;&amp; Leader9__r.EvMailAddr__c&amp; &quot;;&quot;&amp; Leader10__r.EvMailAddr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leader Email</label>
    <type>Text</type>
</CustomField>