force-app/main/default/objects/Group_Hierarchy__c/fields/Leadertobedeleted__c.field-meta.xml
<CustomField>
    <fullName>Leadertobedeleted__c</fullName>
    <label>Leader(tobedeleted)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>