force-app/main/default/objects/Group_Hierarchy__c/fields/ParentDivision__c.field-meta.xml
<CustomField>
    <fullName>ParentDivision__c</fullName>
    <label>ParentDivision</label>
    <length>30</length>
    <type>Text</type>
</CustomField>