force-app/main/default/objects/Group_Hierarchy__c/fields/ParentTeam__c.field-meta.xml
<CustomField>
    <fullName>ParentTeam__c</fullName>
    <label>ParentTeam</label>
    <length>30</length>
    <type>Text</type>
</CustomField>