force-app/main/default/objects/Group_Hierarchy__c/fields/ReportURL2__c.field-meta.xml
<CustomField>
    <fullName>ReportURL2__c</fullName>
    <label>ReportURL2</label>
    <type>Url</type>
</CustomField>