force-app/main/default/objects/Group_Hierarchy__c/fields/ReportURL__c.field-meta.xml
<CustomField>
    <fullName>ReportURL__c</fullName>
    <label>ReportURL</label>
    <type>Url</type>
</CustomField>