force-app/main/default/objects/Group_Hierarchy__c/fields/Team_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Team_Cost_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Cost Center</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Groups Hierarchy (Team Cost Center)</relationshipLabel>
    <relationshipName>Groups_Hierarchy1</relationshipName>
    <type>Lookup</type>
</CustomField>