force-app/main/default/objects/Group_Hierarchy__c/fields/TeamCode__c.field-meta.xml
<CustomField>
    <fullName>TeamCode__c</fullName>
    <formula>Team_Cost_Center__r.CostCenter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TeamCode</label>
    <type>Text</type>
</CustomField>