force-app/main/default/objects/Group_Hierarchy__c/fields/TeamCodeobedeleted__c.field-meta.xml
<CustomField>
    <fullName>TeamCodeobedeleted__c</fullName>
    <label>TeamCodetobedeleted</label>
    <length>30</length>
    <type>Text</type>
</CustomField>