force-app/main/default/objects/Group_Hierarchy__c/fields/TeamName__c.field-meta.xml
<CustomField>
    <fullName>TeamName__c</fullName>
    <label>TeamName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>