force-app/main/default/objects/Group_Hierarchy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Division_Cost_Center__c</columns>
    <columns>DivisionCode__c</columns>
    <columns>Group_Cost_Center__c</columns>
    <columns>GroupCode__c</columns>
    <columns>GroupName__c</columns>
    <columns>Leader__c</columns>
    <columns>Leader2__c</columns>
    <columns>Leader_Email__c</columns>
    <columns>ParentDivision__c</columns>
    <columns>ParentTeam__c</columns>
    <columns>Team_Cost_Center__c</columns>
    <columns>TeamCode__c</columns>
    <columns>TeamName__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>