force-app/main/default/objects/Group_Hierarchy__c/listViews/List.listView-meta.xml
<ListView>
    <fullName>List</fullName>
    <columns>Type__c</columns>
    <columns>DivisionCode__c</columns>
    <columns>DivisionName__c</columns>
    <columns>TeamCode__c</columns>
    <columns>GroupCode__c</columns>
    <columns>ParentTeam__c</columns>
    <columns>ParentDivision__c</columns>
    <columns>TeamName__c</columns>
    <columns>GroupName__c</columns>
    <columns>ReportURL__c</columns>
    <columns>ReportURL2__c</columns>
    <columns>Leader__c</columns>
    <columns>Leader2__c</columns>
    <columns>Leader_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>List</label>
</ListView>